--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cra-template": "1.2.0",
     "mdb-react-ui-kit": "^9.0.0",
     "moment": "^2.30.1",
+    "package-name": "^0.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
@@ -45,5 +46,6 @@
   },
   "proxy": "https://sheyroom.onrender.com",
   "devDependencies": {
-    "antd": "^5.23.0"   }
+    "package-name": "^newest-version"
+  }
 }
