--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
     "cra-template": "1.2.0",
     "mdb-react-ui-kit": "^9.0.0",
     "moment": "^2.30.1",
-    "package-name": "^0.1.0",
-    "react": "^18.3.1",
+   "react": "^18.3.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1",
+  "react-router-dom": "^7.0.0",
+   "react-scripts": "5.0.2",
     "react-spinners": "^0.15.0",
     "react-stripe-checkout": "^2.6.3",
-    "styled-components": "^6.1.13",
-    "sweetalert2": "^11.15.10",
+  "styled-components": "^6.1.0",
+  "sweetalert2": "^11.15.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -46,6 +45,6 @@
   },
   "proxy": "https://sheyroom.onrender.com",
   "devDependencies": {
-    "package-name": "^newest-version"
+    "antd": "^5.23.0"
   }
 }
