--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "antd": "^5.22.7",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "mdb-react-ui-kit": "^9.0.0",
     "moment": "^2.30.1",
-   "react": "^18.3.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-  "react-router-dom": "^7.0.0",
-   "react-scripts": "5.0.2",
+    "react-router-dom": "^7.1.1",
+    "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
     "react-stripe-checkout": "^2.6.3",
-  "styled-components": "^6.1.0",
-  "sweetalert2": "^11.15.0",
+    "styled-components": "^6.1.13",
+    "sweetalert2": "^11.15.10",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -45,6 +45,6 @@
   },
   "proxy": "https://sheyroom.onrender.com",
   "devDependencies": {
-    "antd": "^5.23.0"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
