--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^5.22.7",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "eslint": "^9.18.0",
     "mdb-react-ui-kit": "^9.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
