--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,10 @@
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+echo "node_modules" >> .gitignore
+echo ".npm" >> .gitignore
+echo ".pnp" >> .gitignore
+echo ".pnp.js" >> .gitignore
 
 
