--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "antd": "^5.22.7",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
-    "eslint": "^9.18.0",
     "mdb-react-ui-kit": "^9.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -15,7 +14,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.15.0",
     "react-stripe-checkout": "^2.6.3",
     "styled-components": "^6.1.13",
@@ -46,6 +45,8 @@
   },
   "proxy": "https://sheyroom.onrender.com",
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "eslint": "^8.50.0",
+    "eslint-config-react-app": "^7.0.1"
   }
 }
