--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "proxy": "https://sheyroom.onrender.com",
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1"
   }
