--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "antd": "^5.23.2",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "mdb-react-ui-kit": "^9.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
